<resources>
    <string name="app_name">NFUShop</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">购物车</string>
    <string name="title_user">用户</string>
    <string name="title_address">我的地址</string>
    <string name="title_order">我的订单</string>
    <string name="title_setting">设置</string>
    <string name="title_exit">退出</string>
    <string name="title_hot">最热商品</string>
    <string name="title_newest">最新商品</string>
    <string name="title_name">姓名</string>
    <string name="title_sex">性别</string>
    <string name="title_phone">号码</string>
    <string name="title_all">全部</string>
    <string name="title_pay_order">未支付</string>
    <string name="title_not_pay_order">已支付</string>
    <string name="title_delivery">已发货</string>
    <string name="sex_man">男</string>
    <string name="sex_female">女</string>
    <string name="title_detail">详细</string>
    <string name="btn_submit">提交</string>
    <string name="btn_add">添加</string>
    <string name="btn_del">删除</string>
    <string name="activity_login">登录</string>
    <string name="activity_address_list">我的地址</string>
    <string name="activity_goods_detail">商品详细</string>
    <string name="activity_create_order">创建订单</string>
    <string name="activity_image_preview">图片预览</string>
    <string name="activity_search">搜索</string>
    <string name="activity_order">我的订单</string>
    <string name="tip_spec">选择商品规格</string>
    <string name="btn_add_cart">添加到购物车</string>
    <string name="btn_pay_now">立即支付</string>
    <string name="btn_confirm_delivery">确认收货</string>
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">注册</string>
    <string name="welcome">欢迎</string>
    <string name="invalid_username">用户名无效</string>
    <string name="invalid_password">密码必须至少5位数字</string>
    <string name="login_failed">登录失败</string>
    <string name="select_address">请选择收货地址</string>
    <string name="search_tips">点我搜索</string>
    <string name="not_found">找不到,换个关键字试试呗</string>
    <string name="pop_select_tip">销量/库存</string>
    <string name="search_condition_price">销售价格</string>
    <string name="search_condition_time">创建时间</string>
</resources>
