<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".AddAddress">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/backGroundSecond"
        android:orientation="horizontal">

        <TextView

            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_name"
            android:textColor="#7F7F7F"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/backGroundSecond"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_sex"
            android:textColor="#7F7F7F"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/men"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/sex_man" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/sex_female" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/backGroundSecond"
        android:orientation="horizontal">

        <TextView

            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_phone"
            android:textColor="#7F7F7F"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/backGroundSecond"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_detail"
            android:textColor="#7F7F7F"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text">

        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/submit"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/btn_submit2"
            android:text="@string/btn_submit"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/delete"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@color/backGroundPrimary"
            android:stateListAnimator="@null"
            android:text="@string/btn_del"
            android:textColor="#ff0000" />
    </LinearLayout>
</LinearLayout>