<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundPrimary"
    app:flexDirection="column"
    app:justifyContent="flex_start">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/backGroundSecond"
        android:orientation="horizontal"
        app:layout_flexShrink="0">

        <RadioButton
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/title_all"
            android:textColor="@drawable/order_menu_item"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_pay_order"
            android:textColor="@drawable/order_menu_item"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_not_pay_order"
            android:textColor="@drawable/order_menu_item"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_delivery"
            android:textColor="@drawable/order_menu_item"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:text="@string/title_not_delivery"
            android:textColor="@drawable/order_menu_item"
            android:textSize="16sp" />
    </RadioGroup>

    <com.example.fuck2.ui.ScrollBottomScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_flexGrow="1">

        <LinearLayout
            android:id="@+id/order_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>


    </com.example.fuck2.ui.ScrollBottomScrollView>
</com.google.android.flexbox.FlexboxLayout>