<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundSecond"
    app:flexDirection="column">


    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:queryHint="@string/search_tips"
        android:layout_height="wrap_content"
        app:layout_flexShrink="0" />


    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_flexShrink="0"

        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_flexGrow="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">

            <!--        Title-->
            <RelativeLayout
                android:id="@+id/title_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="center"
                    android:src="@drawable/hot_title"
                    app:riv_corner_radius="@dimen/radius"
                    app:riv_mutate_background="true"
                    app:riv_tile_mode="clamp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_hot"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </RelativeLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/hot_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:flexDirection="row"
                app:justifyContent="space_between">

                <com.example.fuck2.ui.PreViewGoods
                    android:id="@+id/hot_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.example.fuck2.ui.PreViewGoods
                    android:id="@+id/hot_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.example.fuck2.ui.PreViewGoods
                    android:id="@+id/hot_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/hot_group2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:flexDirection="row"
                app:justifyContent="space_between"
                app:layout_constraintTop_toBottomOf="@+id/title_hot">

                <com.example.fuck2.ui.PreViewGoods
                    android:id="@+id/hot_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.example.fuck2.ui.PreViewGoods
                    android:id="@+id/hot_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.example.fuck2.ui.PreViewGoods
                    android:id="@+id/hot_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.flexbox.FlexboxLayout>


            <!--            Newest-->

            <RelativeLayout
                android:id="@+id/title_newest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="center"
                    android:src="@drawable/hot_title"
                    app:riv_corner_radius="5dp"
                    app:riv_mutate_background="true"
                    app:riv_tile_mode="clamp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_newest"
                    android:textColor="#ffffff"
                    android:textSize="20dp" />
            </RelativeLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/newest_group1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:flexDirection="row"
                app:justifyContent="space_between"
                app:layout_constraintTop_toBottomOf="@+id/title_hot">

                <com.example.fuck2.ui.PreViewGoods
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.example.fuck2.ui.PreViewGoods
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.example.fuck2.ui.PreViewGoods
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/newest_group2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:flexDirection="row"
                app:justifyContent="space_between">

                <com.example.fuck2.ui.PreViewGoods
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.example.fuck2.ui.PreViewGoods
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.example.fuck2.ui.PreViewGoods
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>


    </ScrollView>


</com.google.android.flexbox.FlexboxLayout>